--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,3 +3,7 @@
 <% if user_signed_in? %>
   <%= link_to 'Logout', destroy_user_session_path, method: 'delete' %>
 <% end %>
+
+<% unless user_signed_in? %>
+  <%= link_to 'Log In',  new_user_session_path %>
+<% end %>
